--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST = localhost
 DB_USER = kanye
-DB_PASSWORD = MYavior12345
+DB_PASS = MYavior12345
 DB_NAME = capstone_2
 DB_PORT = 3308
 SERVER_PORT = 5000
