--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Node js Capstone Project 2. A Node.js REST API with MySQL, Express, JWT authentications and Cloudinary as external storage",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "db:up": "node src/database/scripts/dbUp.js",
@@ -16,13 +15,14 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
     "nodemon": "^2.0.16"
   }
 }
